# mvre

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: fs.rs  main.rs  util.rs
tests/: cli.rs
