[package]
name = "mvre"
description = "move using regex"
authors = ["Arbaaz Shafiq <arbaazshafiq@gmail.com>"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/s1as3r/mvre"
edition = "2024"
version = "0.1.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
regex = "1.12"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = { version = "2.2", features = ["color", "color-auto"] }
predicates = { version = "3.1", features = ["color", "diff", "float-cmp", "normalize-line-endings", "regex"] }
tempfile = { version = "3.27", features = ["getrandom"] }
